fix layout issue for long status labels

--- a/widgets/wrlist/wrlist.scss
+++ b/widgets/wrlist/wrlist.scss
@@ -27,6 +27,7 @@ $moreinfo-color:    rgba(255, 255, 255, 0.7);
     margin: 0 15px;
     text-align: left;
     color: $label-color;
+    li { float: left; width: 100%; }
   }
 
   .list-nostyle {
